--- a/Templates/quesans.html
+++ b/Templates/quesans.html
@@ -6,21 +6,34 @@
 	 <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename = 'css/bootstrap.css') }}" rel="stylesheet">
 
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.ico') }}" type="image/x-icon" />
+
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename = 'css/main.css') }}" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-
+    <style type="text/css">
+	    body{
+	    	background: url('../static/images/qa.jpg');;
+		    background-repeat: no-repeat;
+		    background-size: cover;
+		    color: #808080;
+		}
+    </style>
 
 </head>
+
 <body>
 	<!-- Static navbar -->
 	<div class="navbar navbar-inverse navbar-static-top">
 	    <div class="container">
 	        <div class="navbar-header">
-	            <a class="navbar-brand" href="/">Text Summarization</a>
+	            <a class="navbar-brand" href="/">
+	            	<img class="logo" src="{{ url_for('static', filename = 'images/logo1.png')}}" alt="" />
+	            </a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	            <ul class="nav navbar-nav navbar-right">
@@ -34,7 +47,7 @@
 	<div class="container pt">
 		<div class="row mt">
 	        <div class="col-lg-6 col-lg-offset-3 centered">
-	        	<h3>Question/Answer</h3>
+	        	<div id="heading">Question/Answer</div>
 	            <hr>
 	            <p>Ask all kind of questions from the uploaded content.</p>
 	            <p>Get the perfect answers which contains top extracted key fragments and keywords specific to your question through our fast-reply system</p>
@@ -45,10 +58,10 @@
 	        	<form enctype="multipart/form-data" method="POST" action="/file">
 	        	<div class='custom'>
 	        		<label for="file-upload">Upload File</label>
-	        		<input id="file-upload" name="filename" type="file" style="display:none;" required>
+	        		<input id="file-upload" name="filename" class="btn btn-outline-dark" type="file" style="display:none;" required>
 	        	</div>
 	        		<br><br>
-			  		<input class="btn btn-warning" type="submit" value="Submit">
+			  		<button class="btn btn-dark" type="submit"  value="Submit">Submit</button>
 				</form>
 				<div>{{qa_output}}</div>
 	        </div>
@@ -57,7 +70,7 @@
 	<div>
 
 	<div class="smart-wrap">
-        <div class="smart-forms smart-container wrap-3">
+        <div class="smart-forms smart-container wrap-3 col-lg-4 contain1">
 
             <div class="form-header header-blue">
                 <h5><i class="fa fa-comments"></i> Please Ask Question </h5>
@@ -68,7 +81,7 @@
 
                     <div class="section">
                         <label class="field prepend-icon">
-                            <textarea class="gui-textarea" id="comment" name="comment" placeholder="Enter question..."></textarea>
+                            <textarea class="gui-textarea" id="comment" name="comment" placeholder="Enter question...">{{question}}</textarea>
                             <span class="field-icon"><i class="fa fa-comments"></i></span>
                             <span class="input-hint">
                             </span>
@@ -77,26 +90,26 @@
 
                 </div><!-- end .form-body section -->
                 <div class="form-footer">
-               		<button type="submit" class="button btn-blue"  id="butt" onsubmit="return false">Post Question</button>
+               		<button class="btn btn-dark" type="submit" value="Submit">Post Question</button>
                 </div><!-- end .form-footer section -->
             </form>
             
 
         </div><!-- end .smart-forms section -->
    
-        <div class="smart-forms smart-container wrap-3">
+        <div class="smart-forms smart-container wrap-3 col-lg-4 contain2">
 
             <div class="form-header header-blue">
                 <h5><i class="fa fa-comments"></i>Your Answer </h5>
             </div><!-- end .form-header section -->
 
             <form>
-                <div class="form-body theme-blue">
+                <div class="form-body theme-blue" id="form-id">
 
 
                     <div class="section">
                         <label class="field prepend-icon">
-                            <textarea class="gui-textarea" id="comment" name="comment" placeholder="Your Answer...">{{answer}}</textarea>
+                            <textarea class="gui-textarea" id="gui-textarea1" name="comment" placeholder="Your Answer...">{{answer}}</textarea>
                             <span class="field-icon"><i class="fa fa-comments"></i></span>
                             <span class="input-hint">
                             </span>
@@ -133,10 +146,10 @@
 			}
 		};
 
-		var form = document.getElementById("butt");
+		/*var form = document.getElementById("butt");
 		form.addEventListener('submit', function(e){
 			e.preventDefault();
-		});
+		});*/
 	</script>
 </body>
 </html>
