--- a/Templates/summarize.html
+++ b/Templates/summarize.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>NLP Natural Language Processing</title>
+	<link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.ico') }}" type="image/x-icon" />
 
 	 <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename = 'css/bootstrap.css') }}" rel="stylesheet">
@@ -10,14 +11,22 @@
     <link href="{{ url_for('static', filename = 'css/main.css') }}" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-
+    <style type="text/css">
+	    body{
+	    	background: url('../static/images/summarize.jpg');;
+		    background-repeat: no-repeat;
+		    background-size: cover;
+		}
+    </style>
 </head>
 <body>
 	<!-- Static navbar -->
-	<div class="navbar navbar-inverse navbar-static-top">
+	<div class="navbar navbar-inverse navbar-static-top" id="edit_summary1">
 	    <div class="container">
 	        <div class="navbar-header">
-	            <a class="navbar-brand" href="/">Text Summarization</a>
+	            <a class="navbar-brand" href="/">
+	            	<img class="logo" src="{{ url_for('static', filename = 'images/logo1.png')}}" alt="" />
+	            </a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	            <ul class="nav navbar-nav navbar-right">
@@ -48,12 +57,12 @@
 				      <input type="radio" name="optradio" value="features">Using Feature Extraction
 				    </label>
 				    <br><br>
-	        	<div class='custom'>
-	        		<label for="file-upload">Upload File</label>
-	        		<input id="file-upload" name="filename" type="file" style="display:none;" required>
-	        	</div>
+		        	<div class='custom'>
+		        		<label for="file-upload">Upload File</label>
+		        		<input id="file-upload" name="filename" type="file" class="btn btn-outline-dark" style="display:none;" required>
+		        	</div>
 	        		<br><br>
-			  		<input class="btn btn-warning" type="submit" value="Submit">
+			  		<button class="btn btn-dark" type="submit" value="Submit">Submit</button>
 				</form>
 
 	        </div>
@@ -64,14 +73,12 @@
     <div class="smart-wrap">
         <div class="smart-forms smart-container wrap-3">
 
-            <div class="form-header header-blue">
+            <div class="form-header header-blue" id="edit_summary2">
                 <h5><i class="fa fa-comments"></i>Summary </h5>
             </div><!-- end .form-header section -->
 
-            <form method="post" action="/" id="comment2">
+            <form method="post" action="/email" id="comment2">
                 <div class="form-body theme-blue">
-
-
                     <div class="section">
                         <label class="field prepend-icon">
                             <textarea class="gui-textarea" id="comment" name="comment" placeholder="Your Answer...">{{summary_output}}</textarea>
@@ -80,6 +87,11 @@
                             </span>
                         </label>
                     </div><!-- end section -->
+                </div>
+                <div class="form-footer">
+               		<button type="button" id="button_click" class="button btn-blue" onclick="createNewElement();">Email Summary</button>
+               		<div id="newElementId"></div> 
+               		{{text}}
                 </div>
             </form>
 
@@ -110,6 +122,14 @@
 			    }
 			}
 		};
+
+		function createNewElement(){
+			var txtNewInputBox = document.createElement('div');
+			txtNewInputBox.innerHTML='<div><br><label>Email &nbsp</label><input type="Email" name="email" required><br><br><button type="submit" class="button btn-blue">Submit</button><br></div>'
+			document.getElementById("newElementId").appendChild(txtNewInputBox);
+			var elem = document.getElementById('button_click');
+    		elem.parentNode.removeChild(elem);
+		}
 	</script>
 </body>
 </html>
